changing the heading with pagraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Testing</title>
 </head>
 <body>
-    <h1>Hello, hope to find this heading in GetHub</h1>
+    <p>I changed my mind I want a paragraph not heading </p>
 </body>
 </html>
